[gd_scene load_steps=2 format=1]

[ext_resource path="res://scripts/debugWindow.gd" type="Script" id=1]

[node name="debugWindow" type="Node"]

script/script = ExtResource( 1 )

[node name="debugPanel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1030.0
margin/bottom = 150.0

[node name="column_0" type="VBoxContainer" parent="debugPanel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 5.0
margin/right = 100.0
margin/bottom = 150.0
alignment = 0

[node name="column_1" type="VBoxContainer" parent="debugPanel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 5.0
margin/right = 200.0
margin/bottom = 150.0
alignment = 0

[node name="column_2" type="VBoxContainer" parent="debugPanel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 5.0
margin/right = 295.0
margin/bottom = 150.0
alignment = 0

[node name="column_3" type="VBoxContainer" parent="debugPanel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 300.0
margin/top = 5.0
margin/right = 395.0
margin/bottom = 150.0
alignment = 0

[node name="column_4" type="VBoxContainer" parent="debugPanel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 5.0
margin/right = 495.0
margin/bottom = 150.0
alignment = 0

[node name="column_5" type="VBoxContainer" parent="debugPanel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 5.0
margin/right = 595.0
margin/bottom = 150.0
alignment = 0

[node name="column_6" type="VBoxContainer" parent="debugPanel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 600.0
margin/top = 5.0
margin/right = 695.0
margin/bottom = 150.0
alignment = 0

[node name="column_7" type="VBoxContainer" parent="debugPanel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 725.0
margin/top = 5.0
margin/right = 820.0
margin/bottom = 150.0
alignment = 0


